Migrate 1.21 Part 2