@@ -1,6 +1,5 @@
 package org.nguyendevs.suddendeath.Utils;
 
-import org.bukkit.ChatColor;
 import org.bukkit.GameMode;
 import org.bukkit.NamespacedKey;
 import org.bukkit.entity.EntityType;
@@ -12,7 +11,6 @@ import org.nguyendevs.suddendeath.SuddenDeath;
 import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Level;
-import java.util.stream.Collectors;
 
 public final class Utils {
     private Utils() {
@@ -48,7 +46,7 @@ public final class Utils {
     public static String msg(String path) {
         try {
             String message = SuddenDeath.getInstance().getConfigManager().messages.getConfig().getString(path);
-            return message != null ? ChatColor.translateAlternateColorCodes('&', message) : "";
+            return message != null ? message : "";
         } catch (Exception e) {
             SuddenDeath.getInstance().getLogger().log(Level.WARNING, "Error retrieving message for path: " + path, e);
             return "";
@@ -59,10 +57,11 @@ public final class Utils {
         try {
             return SuddenDeath.getInstance().getConfigManager().messages.getConfig().getStringList(path)
                     .stream()
-                    .map(text -> ChatColor.translateAlternateColorCodes('&', text))
-                    .collect(Collectors.toList());
+                    .map(text -> text)
+                    .toList();
         } catch (Exception e) {
-            SuddenDeath.getInstance().getLogger().log(Level.WARNING, "Error retrieving message list for path: " + path, e);
+            SuddenDeath.getInstance().getLogger().log(Level.WARNING, "Error retrieving message list for path: " + path,
+                    e);
             return List.of();
         }
     }
@@ -87,7 +86,7 @@ public final class Utils {
     public static List<EntityType> getLivingEntityTypes() {
         return Arrays.stream(EntityType.values())
                 .filter(type -> type.isSpawnable() && type.isAlive())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static int romanToInt(String number) {
@@ -96,16 +95,26 @@ public final class Utils {
         }
         try {
             number = number.toUpperCase();
-            if (number.startsWith("CD")) return 400 + romanToInt(number.substring(2));
-            if (number.startsWith("C")) return 100 + romanToInt(number.substring(1));
-            if (number.startsWith("XC")) return 90 + romanToInt(number.substring(2));
-            if (number.startsWith("L")) return 50 + romanToInt(number.substring(1));
-            if (number.startsWith("XL")) return 40 + romanToInt(number.substring(2));
-            if (number.startsWith("X")) return 10 + romanToInt(number.substring(1));
-            if (number.startsWith("IX")) return 9 + romanToInt(number.substring(2));
-            if (number.startsWith("V")) return 5 + romanToInt(number.substring(1));
-            if (number.startsWith("IV")) return 4 + romanToInt(number.substring(2));
-            if (number.startsWith("I")) return 1 + romanToInt(number.substring(1));
+            if (number.startsWith("CD"))
+                return 400 + romanToInt(number.substring(2));
+            if (number.startsWith("C"))
+                return 100 + romanToInt(number.substring(1));
+            if (number.startsWith("XC"))
+                return 90 + romanToInt(number.substring(2));
+            if (number.startsWith("L"))
+                return 50 + romanToInt(number.substring(1));
+            if (number.startsWith("XL"))
+                return 40 + romanToInt(number.substring(2));
+            if (number.startsWith("X"))
+                return 10 + romanToInt(number.substring(1));
+            if (number.startsWith("IX"))
+                return 9 + romanToInt(number.substring(2));
+            if (number.startsWith("V"))
+                return 5 + romanToInt(number.substring(1));
+            if (number.startsWith("IV"))
+                return 4 + romanToInt(number.substring(2));
+            if (number.startsWith("I"))
+                return 1 + romanToInt(number.substring(1));
             return -1;
         } catch (Exception e) {
             SuddenDeath.getInstance().getLogger().log(Level.WARNING, "Error converting Roman numeral: " + number, e);
@@ -119,19 +128,50 @@ public final class Utils {
         }
         try {
             StringBuilder result = new StringBuilder();
-            while (input >= 400) { result.append("CD"); input -= 400; }
-            while (input >= 100) { result.append("C"); input -= 100; }
-            while (input >= 90) { result.append("XC"); input -= 90; }
-            while (input >= 50) { result.append("L"); input -= 50; }
-            while (input >= 40) { result.append("XL"); input -= 40; }
-            while (input >= 10) { result.append("X"); input -= 10; }
-            while (input >= 9) { result.append("IX"); input -= 9; }
-            while (input >= 5) { result.append("V"); input -= 5; }
-            while (input >= 4) { result.append("IV"); input -= 4; }
-            while (input >= 1) { result.append("I"); input -= 1; }
+            while (input >= 400) {
+                result.append("CD");
+                input -= 400;
+            }
+            while (input >= 100) {
+                result.append("C");
+                input -= 100;
+            }
+            while (input >= 90) {
+                result.append("XC");
+                input -= 90;
+            }
+            while (input >= 50) {
+                result.append("L");
+                input -= 50;
+            }
+            while (input >= 40) {
+                result.append("XL");
+                input -= 40;
+            }
+            while (input >= 10) {
+                result.append("X");
+                input -= 10;
+            }
+            while (input >= 9) {
+                result.append("IX");
+                input -= 9;
+            }
+            while (input >= 5) {
+                result.append("V");
+                input -= 5;
+            }
+            while (input >= 4) {
+                result.append("IV");
+                input -= 4;
+            }
+            while (input >= 1) {
+                result.append("I");
+                input -= 1;
+            }
             return result.toString();
         } catch (Exception e) {
-            SuddenDeath.getInstance().getLogger().log(Level.WARNING, "Error converting integer to Roman numeral: " + input, e);
+            SuddenDeath.getInstance().getLogger().log(Level.WARNING,
+                    "Error converting integer to Roman numeral: " + input, e);
             return ">499";
         }
     }
@@ -185,7 +225,8 @@ public final class Utils {
             }
             return caseOnWords(item.getType().name().replace("_", " "));
         } catch (Exception e) {
-            SuddenDeath.getInstance().getLogger().log(Level.WARNING, "Error getting display name for item: " + item.getType(), e);
+            SuddenDeath.getInstance().getLogger().log(Level.WARNING,
+                    "Error getting display name for item: " + item.getType(), e);
             return "";
         }
     }
